--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <section id="content" class="main">
   <section class="announcement group">
-    <p class="title">Share the technology stack of your site</p>
-    <p class="subtitle">What programming language, framework, database and other tools do your sites use?</p>
+    <p class="title">Share the line of thought behind your site</p>
+    <p class="subtitle">What programming language, framework, database and other tools do you use?</p>
     
     <div class="feature group">
       <p class="minilink"><%= link_to "see some sites", sites_path %> or</p>
