--- a/app/views/sites/new.erb
+++ b/app/views/sites/new.erb
@@ -3,8 +3,7 @@
 <section id="content" class="main">
   <article>
     <h2><%= @title %></h2>
-    <p>All sites in our system need a unique URL associated with them. It's possible to add multiple sites on the same domain if they are on different subdomains, otherwise they should all be under the same root domain listing.</p>
-    <p>For instance, if you try to add a Twitter handle, like <a href="http://twitter.com/lineof">http://twitter.com/lineof</a>, we'll actually add the root site, <a href="http://twitter.com">http://twitter.com</a>. <strong>Sites must be root domains or subdomains.</strong></p>
+    <p>You can enter any URL here. We'll use the domain (or domain + subdomain) to identify your site. You can't add individual pages on a site, just the root site itself.</p>
   </article>
   <section>
     <div id="site_error" class="error response" style="display:none;">
