--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -26,7 +26,7 @@
   <aside>
     <h3>Add a Site</h3>
     <p class="center">You can add your site before creating an account.</p>
-    <p class="center"><%= link_to "Add a new site", new_site_path, :class => "button green" %></p>
+    <p class="center"><%= link_to "Add your site", new_site_path, :class => "button green" %></p>
   </aside>
   
   <%= render :partial => "sites/featured" %>
