--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -456,6 +456,8 @@ section.deleted li.edit-in-place-edit, section.single-site-tool li.edit-in-place
  section.show_form p.add_more, section.show_form p.main_message {display: none}
 p.add_more {text-align: center; font-size: 18px; color: #555; margin: 14px 0; line-height: 40px}
 p.add_more a {margin-left: 14px}
+section .add_in_place {display: none}
+section.show_form .add_in_place {display: block}
 .button, a.button, input.button {text-transform: lowercase; font-family: Arial,sans-serif; font-weight: normal; padding: 7px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; cursor: pointer; display: inline-block; font-size: 18px; line-height: 20px; margin: 0; overflow: visible; padding: 5px 18px; text-decoration: none; width: auto; font-style: inherit}
 .button.orange {background-color: #FFE14C; background-image: -moz-linear-gradient(center top, #fff3b7 0%, #f9b700 100%); background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff3b7), to(#f9b700)); border: 1px solid #FFD400; color: #4D4220; text-shadow: 0 1px 1px #FFEE99}
 .button.orange:hover {background-color: #ffde3d; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #fff0a8), color-stop(100%, #eaac00)); background-image: -moz-linear-gradient(top, #fff0a8 0%, #eaac00 100%); border-color: #f0c700; text-shadow: #ffeb8a 0px 1px 1px}
