--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <section id="content" class="main">
   <section class="announcement group">
-    <p class="title">Share the line of thought behind your site</p>
-    <p class="subtitle">What programming language, framework, database and other tools do you use?</p>
+    <p class="title">Share the line of thought behind your website</p>
+    <p class="subtitle">What programming language, framework, database do your websites use?</p>
     
     <div class="feature group">
-      <p class="minilink"><%= link_to "see some sites", sites_path %> or</p>
+      <p class="minilink"><%= link_to "see popular sites", sites_path %> or</p>
       <p><%= link_to "Add Your Site Now", new_site_path, :class => "green button center" %></p>
       <p class="subbutton">No account needed</p>
     </div>
