--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title><%= page_title %></title>
   <link rel="shortcut icon" href="/favicon.ico"/>
   <link rel="fluid-icon" href="/fluidicon.png" title="Line of Thought" /> 
+  <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
   <meta content="<%= page_description %>" name="description" />
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
   <meta content="en-us" http-equiv="Content-Language" />
@@ -96,5 +97,24 @@
 
 <%= raw javascript_include_merged :all %>
 <%= yield :javascript %>
+<script type="text/javascript">
+var _sf_async_config={uid:21538,domain:"lineofthought.com"};
+(function(){
+  function loadChartbeat() {
+    window._sf_endpt=(new Date()).getTime();
+    var e = document.createElement('script');
+    e.setAttribute('language', 'javascript');
+    e.setAttribute('type', 'text/javascript');
+    e.setAttribute('src',
+       (("https:" == document.location.protocol) ? "https://a248.e.akamai.net/chartbeat.download.akamai.com/102508/" : "http://static.chartbeat.com/") +
+       "js/chartbeat.js");
+    document.body.appendChild(e);
+  }
+  var oldonload = window.onload;
+  window.onload = (typeof window.onload != 'function') ?
+     loadChartbeat : function() { oldonload(); loadChartbeat(); };
+})();
+
+</script>
 </body>
 </html>
