--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -112,3 +112,5 @@ button.loading { display:none; }
 form fieldset.buttons li.loading-indicator { display:none; line-height: 0;margin: 0;padding: 10px 10px 0 0; }
 form.loading fieldset.buttons li.loading-indicator { display:inline; }
 a.add_another_tool.block { display:block; }
+
+.invite { display:none; }
