Added featured sites to homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,5 +38,6 @@
   </aside>
   <%= render :partial => "layouts/sidebar/share" %>
   <%= render :partial => "tools/featured" %>
+  <%= render :partial => "sites/featured" %>
   <%= render :partial => "usings/recent" %>
 </section>
