Added cannonical paths for certain URLs

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,2 +1,5 @@
+<% header do %>
+  <link rel="canonical" href="<%= site_url(@site) %>"/>
+<% end %>
 <%= render 'show' %>
 <%= render 'show_sidebar' %>
