--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,2 +1,5 @@
+<% header do %>
+  <link rel="canonical" href="<%= tool_url(@tool) %>"/>
+<% end %>
 <%= render 'show' %>
 <%= render 'tools/show_sidebar' %>
