--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <meta content="<%= page_description %>" name="description" />
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
   <meta content="en-us" http-equiv="Content-Language" />
+  <%= yield :header %>
   <%= csrf_meta_tag %>
   <%= raw stylesheet_link_merged :all %>
   <%- if Rails.env == "production" -%>
