--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -27,12 +27,14 @@
 </section>
 
 <section class="sidebar">
-  <aside class="search">
-    <form action="<%= sites_path %>" method="get">
-      <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a site..." />
-      <input type="submit" value="Search" class="small button grey" />
-    </form>
-  </aside>
+  <% if Settings.use_solr %>
+    <aside class="search">
+      <form action="<%= sites_path %>" method="get">
+        <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a site..." />
+        <input type="submit" value="Search" class="small button grey" />
+      </form>
+    </aside>
+  <% end %>
   <aside>
     <h3>Add a Site</h3>
     <p class="center">You can add your site before creating an account.</p>
