--- a/app/views/site_tools/show.html.erb
+++ b/app/views/site_tools/show.html.erb
@@ -59,8 +59,17 @@ $(function() {
       $("#see_history").html("hide history");
     } else {
       $("#see_history").html("see history");
-    }
-    
+    }    
   });
+  
+  $("ul.actions li.bookmarks a").click(function(e) {
+    console.log("clicked");
+    var target = $(e.currentTarget),
+        id = target.attr("data-usingid");
+    console.log("click " + id);
+    $("#bookmarks_for_"+id).toggle();
+    e.preventDefault();
+  });
+  
 });
 <% end %>
