--- a/app/views/tools/_show.erb
+++ b/app/views/tools/_show.erb
@@ -23,5 +23,14 @@ $(function(){
     e.preventDefault();
     return false;
   });
+  
+  $("ul.actions li.bookmarks a").click(function(e) {
+    var target = $(e.currentTarget),
+        id = target.attr("data-usingid");
+    console.log("click " + id);
+    $("#bookmarks_for_"+id).toggle();
+    e.preventDefault();
+  });
+  
 });
 <% end %>
