--- a/app/views/usings/_using_site.erb
+++ b/app/views/usings/_using_site.erb
@@ -32,10 +32,13 @@
           <li><%= link_to "remove", using_path(using_site), :remote => true, :method => :delete, :confirm => "Are you sure you want to delete this association? If you just want to remove the description of how it's used, remove all text and save it." %></li>
         <% end %>
       <% end %>
+      <% if using_site.bookmarks_count > 0 %>
+        <li class="bookmarks"><%= link_to pluralize(using_site.bookmarks_count, "bookmark"), "#", "data-usingid" => using_site.id %></li>
+      <% end %>
     </ul>
   </div>
   
-  <%= raw using_bookmarks(using_site, 2, params[:format]) if using_site.bookmarks_count > 0 %>
+  <%= raw using_bookmarks(using_site, 5, params[:format]) if using_site.bookmarks_count > 0 %>
   
   
   <% if can_edit_using?(using_site, site) %>
