--- a/app/views/bookmarks/_show_sidebar.html.erb
+++ b/app/views/bookmarks/_show_sidebar.html.erb
@@ -1,8 +1,12 @@
 <section class="sidebar">
-  <aside>
-    <h3>Admin Options</h3>
-    <ul class="lst">
-      <li><%= link_to "delete", bookmark_path(@bookmark), :method => :delete, :confirm => "Are you sure you want to delete this bookmark?" %></li>
-    </ul>
-  </aside>
+  <% if logged_in? && current_user.admin? %>
+    <aside>
+      <h3>Admin Options</h3>
+      <ul class="lst">
+        <li><%= link_to "delete", bookmark_path(@bookmark), :method => :delete, :confirm => "Are you sure you want to delete this bookmark?" %></li>
+      </ul>
+    </aside>
+  <% end %>
+  <%= render :partial => "sites/featured" %>
+  <%= render :partial => "tools/featured" %>
 </section>
