--- a/app/views/bookmarks/new.erb
+++ b/app/views/bookmarks/new.erb
@@ -2,51 +2,24 @@
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
+  <p>You can enter any URL here. If the link already has a bookmark, we'll pre-fill the fields for it.</p>
+  
   <section>
-    <% if @link && @link.parsed? %>
+    <% if @bookmark.link%>
       <%= render 'form' %>
     <% else%>
       <%= semantic_form_for @bookmark, :url => lookup_bookmarks_path, :html => { :id => "lookup_bookmark", :remote => true } do |f| %>
         <%= f.inputs do %>
           <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
-          <%= f.commit_button :label => "Lookup URL", :wrapper_html => { :id => "submit_lookup" } %>
-          <%= f.commit_button :label => "Cancel", :id => "lookup_cancel", :wrapper_html => { :style => "display:none;", :id => "cancel_lookup", :class => "response" } %>
-          <li id="lookup_loading" style="display:none;" class="response"> <img src="/images/spinner.gif"/> We're looking up this link, just a sec.</li>
+          <%= f.commit_button :label => "Lookup URL", :wrapper_html => { :id => "submit_lookup" }, :button_html => { :class => "button grey right" } %>
+          <li id="lookup_loading" class="response right" style="display:none;margin:0 10px;"> <img src="/images/indicator.gif"/></li>
+          <%= f.commit_button :label => "Cancel", :wrapper_html => { :style => "display:none;", :id => "cancel_lookup", :class => "response" }, :button_html => { :class => "button grey small right" } %>
         <% end %>
       <% end %>
       <div id="edit_bookmark_form" class="response"></div>
       <div id="bookmark_error" class="error response" style="display:none;">
         <p>Unable to lookup this URL</p>
       </div>
-      
-      <% javascript do %>
-      var checkForLookup = false
-      $(function() {
-        $("#lookup_bookmark").submit(function() {
-          if(!checkForLookup) {
-            $("#submit_lookup input").attr("disabled", "disabled");
-            $("#cancel_lookup, #lookup_loading").show();
-            checkForLookup = setInterval("resubmit_lookup()", 3000);
-          }
-        });
-      })
-      
-      function resubmit_lookup() {
-        $("#lookup_bookmark").submit();
-      }
-      
-      function cancel_lookup() {
-        clearInterval(checkForLookup);
-        checkForLookup = false;
-        $(".response").hide();
-        $("#submit_lookup input").removeAttr("disabled");
-      }
-      function bookmark_error() {
-        cancel_lookup();
-        $("#bookmark_error").show();
-      }
-      
-      <% end %>
     <% end %>
   </section>
 </section>
@@ -54,3 +27,39 @@
 <section class="sidebar">
   <%= render 'bookmarks/recent_bookmarks' %>
 </section>
+
+<% javascript do %>
+var checkForLookup = false
+$(function() {
+  $("#lookup_bookmark").submit(function() {
+    if(!checkForLookup) {
+      $("#submit_lookup input").attr("disabled", "disabled");
+      $("#cancel_lookup, #lookup_loading").show();
+      checkForLookup = setInterval("resubmit_lookup()", 3000);
+    }
+  });
+  
+  $("#cancel_lookup input").click(function(e) {
+    cancel_lookup();
+    e.preventDefault();
+    return false;
+  });
+  
+})
+
+function resubmit_lookup() {
+  $("#lookup_bookmark").submit();
+}
+
+function cancel_lookup() {
+  clearInterval(checkForLookup);
+  checkForLookup = false;
+  $(".response").hide();
+  $("#submit_lookup input").removeAttr("disabled");
+}
+
+function lookup_failed() {
+  cancel_lookup();
+  $("#bookmark_error").show();
+}
+<% end %>
