--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -17,3 +17,15 @@
   </section>
 </section>
 <%= render 'show_sidebar' %>
+
+
+<% javascript do %>
+$(function(){  
+  $("ul.actions li.bookmarks a").click(function(e) {
+    var target = $(e.currentTarget),
+        id = target.attr("data-usingid");
+    $(".bookmarks_for_"+id).toggle();
+    e.preventDefault();
+  });
+});
+<% end %>
