--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -193,17 +193,13 @@ ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank {
   margin: 0.4em 0; }
 
 /* bookmarks#index */
-#bookmarks-list li.ind span.url {
+#bookmarks-list ul.mini-tools li.url {
   float: right;
-  display: none;
   color: #888;
   font-size: 10px; }
 
-#bookmarks-list li.ind span.url a {
+#bookmarks-list ul.mini-tools li.url a {
   color: #888; }
-
-#bookmarks-list li.ind:hover span.url {
-  display: inline; }
 
 /* Sub-list pages tools#show, tools#bookmarks, sites#show, sites#bookmarks, bookmarks#show */
 .sublist li.ind {
