--- a/app/views/bookmarks/_bookmark.erb
+++ b/app/views/bookmarks/_bookmark.erb
@@ -2,7 +2,6 @@
   <div class="details">
     <div class="title">
       <h4><% if bookmark.has_favicon? %><a href="<%= bookmark_path(bookmark) %>" class="favicon"><img src="<%= bookmark.full_favicon_url %>" /></a><% end %><%= link_to truncate(bookmark.title, :length => 100), bookmark_path(bookmark) %>
-        <span class="url"><%= link_to "direct link", bookmark.url, :target => "_blank", :rel => "nofollow" %></span>
         </h4>
       <%= content_tag(:p, truncate(bookmark.description, :length => 200)) unless bookmark.description.blank? %>
     </div>
@@ -19,6 +18,7 @@
   
       <ul class="mini-tools">
         <%= raw bookmark_tools(bookmark) %>
+        <li class="url"><%= link_to "direct link", bookmark.url, :target => "_blank", :rel => "nofollow" %></li>
       </ul>
     </div>
   </div>
