--- a/app/views/bookmarks/new.erb
+++ b/app/views/bookmarks/new.erb
@@ -5,22 +5,18 @@
   <p>You can enter any URL here. If the link already has a bookmark, we'll pre-fill the fields for it.</p>
   
   <section>
-    <% if @bookmark.link%>
-      <%= render 'form' %>
-    <% else%>
-      <%= semantic_form_for @bookmark, :url => lookup_bookmarks_path, :html => { :id => "lookup_bookmark", :remote => true } do |f| %>
-        <%= f.inputs do %>
-          <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
-          <%= f.commit_button :label => "Lookup URL", :wrapper_html => { :id => "submit_lookup" }, :button_html => { :class => "button grey right" } %>
-          <li id="lookup_loading" class="response right" style="display:none;margin:0 10px;"> <img src="/images/indicator.gif"/></li>
-          <%= f.commit_button :label => "Cancel", :wrapper_html => { :style => "display:none;", :id => "cancel_lookup", :class => "response" }, :button_html => { :class => "button grey small right" } %>
-        <% end %>
+    <%= semantic_form_for @bookmark, :url => bookmarks_path, :html => { :id => "lookup_bookmark", :remote => true } do |f| %>
+      <%= f.inputs do %>
+        <%= f.input :url, :as => :string, :required => true, :label => "Bookmark URL" %>
+        <%= f.commit_button :label => "Lookup URL", :wrapper_html => { :id => "submit_lookup" }, :button_html => { :class => "button grey right" } %>
+        <li id="lookup_loading" class="response right" style="display:none;margin:0 10px;"> <img src="/images/indicator.gif"/></li>
+        <%= f.commit_button :label => "Cancel", :wrapper_html => { :style => "display:none;", :id => "cancel_lookup", :class => "response" }, :button_html => { :class => "button grey small right" } %>
       <% end %>
-      <div id="edit_bookmark_form" class="response"></div>
-      <div id="bookmark_error" class="error response" style="display:none;">
-        <p>Unable to lookup this URL</p>
-      </div>
     <% end %>
+    <div id="edit_bookmark_form" class="response"></div>
+    <div id="bookmark_error" class="error response" style="display:none;">
+      <p>Unable to lookup this URL</p>
+    </div>
   </section>
 </section>
 
