--- a/app/views/usings/_using_tool.erb
+++ b/app/views/usings/_using_tool.erb
@@ -27,6 +27,7 @@
           <li><%= link_to "remove", using_path(using_tool), :remote => true, :method => :delete, :confirm => "Are you sure you want to delete this association? If you just want to remove the description of how it's used, remove all text and save it." %></li>
         <% end %>
       <% end %>
+      <li><%= link_to "add bookmark", new_bookmark_path(:using_id => using_tool.id) %></li>
       <% if using_tool.bookmarks_count > 0 %>
         <li class="bookmarks"><%= link_to pluralize(using_tool.bookmarks_count, "bookmark"), "#", "data-usingid" => using_tool.id %></li>
       <% end %>
