--- a/app/views/usings/_using_tool.erb
+++ b/app/views/usings/_using_tool.erb
@@ -26,15 +26,15 @@
         <% if !using_tool.deleted? && can_destroy_using?(using_tool, site, tool) %>
           <li><%= link_to "remove", using_path(using_tool), :remote => true, :method => :delete, :confirm => "Are you sure you want to delete this association? If you just want to remove the description of how it's used, remove all text and save it." %></li>
         <% end %>
+        <li><%= link_to "add attribution", new_site_bookmark_path(site, :using_id => using_tool.id), :class => "modal" %></li>
       <% end %>
-      <li><%= link_to "add bookmark", new_bookmark_path(:using_id => using_tool.id) %></li>
       <% if using_tool.bookmarks_count > 0 %>
-        <li class="bookmarks"><%= link_to pluralize(using_tool.bookmarks_count, "bookmark"), "#", "data-usingid" => using_tool.id %></li>
+        <li class="bookmarks"><%= link_to pluralize(using_tool.bookmarks_count, "attribution"), "#", "data-usingid" => using_tool.id %></li>
       <% end %>
     </ul>
   </div>
 
-  <%= raw using_bookmarks(using_tool, 5, params[:format]) if using_tool.bookmarks_count > 0 %>
+  <%= raw using_bookmarks(using_tool, 15, params[:format]) if using_tool.bookmarks_count > 0 %>
   
   <% if can_edit_using?(using_tool, site) %>
     <%= semantic_form_for using_tool, :remote => true, :method => :put, :html => { :id => "edit_using_#{using_tool.id}" } do |form| %>
